--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link type="image/svg+xml" href="/src/assets/nikelogo.png"/>
+    <link type="image" href="src/assets/nikelogo.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nike.Just Do It</title>
   </head>
